# 2605-GoogleIO-crossmodal-search

./: .gitignore  MANIFEST.in  PRD.md  README.md  pyproject.toml  requirements.txt
crossmodal_search/: __init__.py
crossmodal_search/agents/: __init__.py  managed.py
crossmodal_search/indexer/: __init__.py  caption.py  embed.py  scan.py
crossmodal_search/lib/: __init__.py  e2e.py  env.py
crossmodal_search/search/: __init__.py  hydrate.py  query.py
crossmodal_search/ui/: __init__.py  app.py
crossmodal_search/ui/static/: app.css  detail.js  search.js
crossmodal_search/ui/templates/: detail.html  search.html
